--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang ="en-us">
 <head>
-	<title>Guess the Composer Hangman Game</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script type="text/javascript" src="assets/javascript/game.js"></script>
-	
-
+    <title>Hangman</title>
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
+
 <body>
 
-<section id="game">
-		
-	<p>Press any key to start</p>
+   <div id="game"></div>
 
 
 
-</section>
-
-	
-
-
-
-
-
-	
-	
-
-</body>
 </html>
